@@ -374,7 +374,8 @@ contains more than one of these, the prog will be triggered multiple
 times.</p>
       <pre>act_prog p A wolf howls at the moon.<br /></pre>
       <p>This will trigger the prog when it sees this precise message.
-Note that punctuation is important here as well.</p>
+Note that punctuation is stripped from both your message and the
+message matched against.</p>
       <p>MULTIPLE PROGS: You can have more than one act_prog on a mob,
 but you shouldn't have multiple act_progs that trigger off of the same
 message.</p>
