@@ -2287,3 +2287,4 @@ Special/Reserved Quest called holidays can be added to/modified on an area-by-ar
 18.IMPORT now supports areatype parameter for converting to different types.
 19.MODIFY [TYPE] [NAME] [STAT] [VALUE] command syntax has had first expansion since CM 1.0!
 20.CLAN ROLEs renumbered.  System will fix some deprecated values, but enchanters/treasurers will be confused.
+21.ACT_PROG P clarified in the Scriptable document.
